--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -155,6 +155,9 @@
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="default_view_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -170,6 +173,9 @@
 List View</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="views_label_0" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -208,6 +214,9 @@ List View</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="sort_order_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -226,6 +235,9 @@ By Modification Date
 By Emblems</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="views_label_1" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -367,6 +379,9 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="icon_view_zoom_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -387,6 +402,9 @@ By Emblems</property>
 400%</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="views_label_2" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -528,6 +546,9 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="list_view_zoom_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -548,6 +569,9 @@ By Emblems</property>
 400%</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="views_label_3" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1697,6 +1721,9 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="preview_text_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1713,6 +1740,9 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="preview_label_0" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1816,6 +1846,9 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="preview_image_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1832,6 +1865,9 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="preview_label_1" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1870,6 +1906,9 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="preview_image_size_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1891,6 +1930,9 @@ Never</property>
 1 GB</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="preview_label_2" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1994,6 +2036,9 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="preview_sound_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2010,6 +2055,9 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="preview_label_3" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2113,6 +2161,9 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
+				  <accessibility>
+				      <atkrelation target="preview_folder_combobox" type="label-for"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2129,6 +2180,9 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <accessibility>
+				      <atkrelation target="preview_label_4" type="labelled-by"/>
+				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
