--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -1421,6 +1421,9 @@ By Emblems</property>
 			      <property name="width_chars">-1</property>
 			      <property name="single_line_mode">False</property>
 			      <property name="angle">0</property>
+                              <accessibility>
+                                <atkrelation target="date_format_combobox" type="label-for"/>
+                              </accessibility>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
@@ -1435,6 +1438,9 @@ By Emblems</property>
 			      <property name="items" translatable="yes"></property>
 			      <property name="add_tearoffs">False</property>
 			      <property name="focus_on_click">True</property>
+                              <accessibility>
+                                <atkrelation target="label36" type="labelled-by"/>
+			      </accessibility>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
