Replace the "atkrelation" declarations with "mnemonic_widget" properties
2007-06-10  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-file-management-properties.glade:
	Replace the "atkrelation" declarations with
	"mnemonic_widget" properties (#437340)

svn path=/trunk/; revision=12915

--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -155,9 +155,7 @@
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="default_view_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">default_view_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -173,9 +171,6 @@
 List View</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="views_label_0" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -214,9 +209,7 @@ List View</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="sort_order_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">sort_order_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -235,9 +228,6 @@ By Modification Date
 By Emblems</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="views_label_1" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -379,9 +369,7 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="icon_view_zoom_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">icon_view_zoom_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -402,9 +390,6 @@ By Emblems</property>
 400%</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="views_label_2" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -546,9 +531,7 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="list_view_zoom_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">list_view_zoom_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -569,9 +552,6 @@ By Emblems</property>
 400%</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="views_label_3" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1421,9 +1401,7 @@ By Emblems</property>
 			      <property name="width_chars">-1</property>
 			      <property name="single_line_mode">False</property>
 			      <property name="angle">0</property>
-                              <accessibility>
-                                <atkrelation target="date_format_combobox" type="label-for"/>
-                              </accessibility>
+			      <property name="mnemonic_widget">date_format_combobox</property>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
@@ -1438,9 +1416,6 @@ By Emblems</property>
 			      <property name="items" translatable="yes"></property>
 			      <property name="add_tearoffs">False</property>
 			      <property name="focus_on_click">True</property>
-                              <accessibility>
-                                <atkrelation target="label36" type="labelled-by"/>
-			      </accessibility>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
@@ -1727,9 +1702,7 @@ By Emblems</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="preview_text_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">preview_text_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1746,9 +1719,6 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="preview_label_0" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1852,9 +1822,7 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="preview_image_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">preview_image_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1871,9 +1839,6 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="preview_label_1" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1912,9 +1877,7 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="preview_image_size_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">preview_image_size_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -1936,9 +1899,6 @@ Never</property>
 1 GB</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="preview_label_2" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2042,9 +2002,7 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="preview_sound_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">preview_sound_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2061,9 +2019,6 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="preview_label_3" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2167,9 +2122,7 @@ Never</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
-				  <accessibility>
-				      <atkrelation target="preview_folder_combobox" type="label-for"/>
-				  </accessibility>
+				  <property name="mnemonic_widget">preview_folder_combobox</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -2186,9 +2139,6 @@ Local Files Only
 Never</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
-				  <accessibility>
-				      <atkrelation target="preview_label_4" type="labelled-by"/>
-				  </accessibility>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
