--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -756,7 +756,7 @@ By Emblems</property>
 			    <widget class="GtkRadioButton" id="single_click_radiobutton">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Single click to activate items</property>
+			      <property name="label" translatable="yes">_Single click to open items</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -775,7 +775,7 @@ By Emblems</property>
 			    <widget class="GtkRadioButton" id="double_click_radiobutton">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Double click to activate items</property>
+			      <property name="label" translatable="yes">_Double click to open items</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -879,7 +879,7 @@ By Emblems</property>
 			    <widget class="GtkRadioButton" id="scripts_execute_radiobutton">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Run executable text files when they are clicked</property>
+			      <property name="label" translatable="yes">_Run executable text files when they are opened</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -898,7 +898,7 @@ By Emblems</property>
 			    <widget class="GtkRadioButton" id="scripts_view_radiobutton">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_View executable text files when they are clicked</property>
+			      <property name="label" translatable="yes">_View executable text files when they are opened</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
