--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -92,7 +92,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label4">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Default View&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Default View&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -306,7 +306,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label5">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Icon View Defaults&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Icon View Defaults&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -468,7 +468,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label6">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;List View Defaults&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;List View Defaults&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -592,7 +592,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label25">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Tree View Defaults&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Tree View Defaults&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -712,7 +712,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label10">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Behavior&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Behavior&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -835,7 +835,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label12">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Executable Text Files&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Executable Text Files&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -959,7 +959,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label14">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Trash&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Trash&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1098,7 +1098,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label28">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Icon Captions&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Icon Captions&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1172,7 +1172,7 @@ By Emblems</property>
 			      <child>
 				<widget class="GtkLabel" id="captions_label_0">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes"></property>
+				  <property name="label" translatable="no"></property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1224,7 +1224,7 @@ By Emblems</property>
 			      <child>
 				<widget class="GtkLabel" id="captions_label_1">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes"></property>
+				  <property name="label" translatable="no"></property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1276,7 +1276,7 @@ By Emblems</property>
 			      <child>
 				<widget class="GtkLabel" id="captions_label_2">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes"></property>
+				  <property name="label" translatable="no"></property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1344,7 +1344,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label34">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Date&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Date&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1485,7 +1485,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label31">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;List Columns&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;List Columns&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1516,7 +1516,7 @@ By Emblems</property>
 		      <child>
 			<widget class="GtkLabel" id="label32">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">    </property>
+			  <property name="label" translatable="no">    </property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1639,7 +1639,7 @@ By Emblems</property>
 		  <child>
 		    <widget class="GtkLabel" id="label16">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Text Files&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Text Files&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1759,7 +1759,7 @@ Never</property>
 		  <child>
 		    <widget class="GtkLabel" id="label18">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Other Previewable Files&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Other Previewable Files&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1939,7 +1939,7 @@ Never</property>
 		  <child>
 		    <widget class="GtkLabel" id="label20">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Sound Files&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Sound Files&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2059,7 +2059,7 @@ Never</property>
 		  <child>
 		    <widget class="GtkLabel" id="label22">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Folders&lt;/span&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Folders&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2221,7 +2221,7 @@ Never</property>
 		      <child>
 			<widget class="GtkLabel" id="label42">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Media Handling&lt;/span&gt;</property>
+			  <property name="label" translatable="yes">&lt;b&gt;Media Handling&lt;/b&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2551,7 +2551,7 @@ Never</property>
 		      <child>
 			<widget class="GtkLabel" id="label61">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">&lt;span weight=&quot;bold&quot;&gt;Other Media&lt;/span&gt;</property>
+			  <property name="label" translatable="yes">&lt;b&gt;Other Media&lt;/b&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
