Display compact view after list view, rather than before it. Fixes
2008-07-21  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-icon-view.c (fm_icon_view_register),
	(fm_compact_view_register):
	* src/file-manager/fm-icon-view.h:
	* src/nautilus-application.c (nautilus_application_instance_init):
	* src/nautilus-file-management-properties.c:
	* src/nautilus-file-management-properties.glade:
	Display compact view after list view, rather than before it. Fixes
	keybindings, and #543934. Thanks to Diego Escalante Urrelo.

svn path=/trunk/; revision=14384

--- a/src/nautilus-file-management-properties.glade
+++ b/src/nautilus-file-management-properties.glade
@@ -168,8 +168,8 @@
 				<widget class="GtkComboBox" id="default_view_combobox">
 				  <property name="visible">True</property>
 				  <property name="items" translatable="yes">Icon View
-Compact View
-List View</property>
+List View
+Compact View</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
 				</widget>
