Update the 2GB and 4GB thumbnail limits to the new prefs API and make sure
2008-12-10  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-global-preferences.c:
        * src/nautilus-file-management-properties.c:
        * src/nautilus-file-management-properties.ui:
	Update the 2GB and 4GB thumbnail limits to the new prefs API and
	make sure they actually work.


svn path=/trunk/; revision=14806

--- a/src/nautilus-file-management-properties.ui
+++ b/src/nautilus-file-management-properties.ui
@@ -184,6 +184,12 @@
       <row>
         <col id="0">1 GB</col>
       </row>
+      <row>
+        <col id="0">2 GB</col>
+      </row>
+      <row>
+        <col id="0">4 GB</col>
+      </row>
     </data>
   </object>
   <object class="GtkListStore" id="model9">
