--- a/src/nautilus-file-management-properties.ui
+++ b/src/nautilus-file-management-properties.ui
@@ -1128,7 +1128,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label">
+                              <object class="GtkLabel" id="label99">
                                 <property name="height_request">6</property>
                                 <property name="visible">True</property>
                                 <property name="label" translatable="yes"/>
